--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "kiwi suite"
+      "name": "Lucas Seinfeld (luchaos)"
     }
   ],
   "require": {}
