--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --aot",
-    "build": "ng build --prod",
+    "build": "ng build --prod --output-path=build/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -30,7 +30,7 @@
     "@angular/upgrade": "^5.1.3",
     "@kiwi-suite/ngx-admin": "^1.0.0-alpha.0",
     "angular-async-local-storage": "^3.1.1",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "^4.0.0-beta.2",
     "chart.js": "2.7.1",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
