--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "ng build --prod --output-path=build/",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "ci": "npm run lint && npm run test:once && npm run e2e"
   },
   "private": true,
   "dependencies": {
