--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "ng serve --aot",
     "build": "ng build --prod --output-path=build/",
     "test": "ng test",
+    "test:once": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "ci": "npm run lint && npm run test:once && npm run e2e"
