--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ addons:
 language: node_js
 node_js:
   - '6.9.1'
-#branches:
-#  only:
-#  - master
+branches:
+  only:
+  - master
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
