--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/upgrade": "^5.2.2",
     "@kiwi-suite/ngx-admin": "^1.0.0-alpha.0",
     "angular-async-local-storage": "^3.1.1",
+    "angular2-text-mask": "^8.0.4",
     "bootstrap": "^4.0.0",
     "chart.js": "2.7.1",
     "core-js": "^2.5.3",
@@ -41,6 +42,7 @@
     "ngx-bootstrap": "1.9.3",
     "rxjs": "^5.5.6",
     "simple-line-icons": "^2.4.1",
+    "text-mask-addons": "^3.7.1",
     "ts-helpers": "1.1.2",
     "typescript": "^2.6.2",
     "zone.js": "^0.8.20"
