--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ng-select/ng-select": "^0.25.0",
     "@swimlane/ngx-datatable": "^11.2.0",
     "angular-async-local-storage": "^3.1.1",
+    "angular2-hotkeys": "^2.0.4",
     "angular2-text-mask": "^8.0.4",
     "bootstrap": "^4.0.0",
     "chart.js": "2.7.1",
