use tsconfig paths to resolve @kiwi-suite/ngx-admin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
       "dom"
     ],
     "paths": {
-      "ngx-admin": [
-        "dist/ngx-admin"
+      "@kiwi-suite/ngx-admin": [
+        "dist/@kiwi-suite/ngx-admin"
       ]
     }
   }
