--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -8,9 +8,9 @@
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
-  ],
-  "include":[
-    "./**/*.ts",
-    "../node_modules/@kiwi-suite/**/*.ts"
   ]
+//  "include":[
+//    "./**/*.ts",
+//    "../projects/kiwi-suite/**/*.ts",
+//  ]
 }
