--- a/proxy-example-localhost.config.json
+++ b/proxy-example-localhost.config.json
@@ -1,8 +1,14 @@
 {
   "/kiwi-v4/admin/*": {
-    "target": "http://localhost",
+    "target": "http://localhost/kiwi-v4",
     "secure": false,
     "logLevel": "debug",
     "changeOrigin": true
   },
+  "/media/img/*": {
+    "target": "http://localhost/kiwi-v4",
+    "secure": false,
+    "logLevel": "debug",
+    "changeOrigin": true
+  }
 }
