--- a/proxy-example-localhost-root-admin.config.json
+++ b/proxy-example-localhost-root-admin.config.json
@@ -16,5 +16,11 @@
     "secure": false,
     "logLevel": "debug",
     "changeOrigin": true
+  },
+  "/assets/*": {
+    "target": "http://localhost/kiwi-v4",
+    "secure": false,
+    "logLevel": "debug",
+    "changeOrigin": true
   }
 }
