--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
   "name": "@kiwi-suite/admin-frontend",
   "version": "1.0.0",
-  "license": "MIT",
-  "author": "kiwi suite",
-  "contributors": [
-    {
-      "name": "Lucas Seinfeld (luchaos)"
-    }
-  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve --aot --proxy-config proxy.config.json",
-    "build": "ng build --prod --output-path=build/ --deploy-url=assets/admin/ --base-href=/ --output-hashing all",
+    "build": "ng build --prod --build-optimizer --output-path=build/ --base-href=/blaundblubmalschaunwodasvorkommt --output-hashing all --extract-licenses --preserve-symlinks --extract-css --progress --show-circular-dependencies=false && rm build/index.html",
     "test": "ng test",
     "test:once": "ng test --watch=false",
     "lint": "ng lint",
@@ -20,43 +13,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/compiler": "6.0.1",
-    "@angular/animations": "6.0.1",
-    "@angular/forms": "6.0.1",
-    "@angular/http": "6.0.1",
-    "@angular/platform-browser": "6.0.1",
-    "@angular/platform-browser-dynamic": "6.0.1",
-    "@angular/router": "6.0.1",
-    "@angular/service-worker": "6.0.1",
-    "@angular/upgrade": "6.0.1",
-    "@coreui/angular": "^2.0.0-beta.4",
+    "@angular/animations": "6.0.2",
+    "@angular/common": "6.0.2",
+    "@angular/compiler": "6.0.2",
+    "@angular/core": "6.0.2",
+    "@angular/forms": "6.0.2",
+    "@angular/http": "6.0.2",
+    "@angular/platform-browser": "6.0.2",
+    "@angular/platform-browser-dynamic": "6.0.2",
+    "@angular/router": "6.0.2",
+    "@angular/service-worker": "6.0.2",
+    "@angular/upgrade": "6.0.2",
+    "@coreui/angular": "^2.0.0-rc.1",
+    "@coreui/coreui": "^2.0.3",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "^0.1.1",
-    "@ng-select/ng-select": "^2.0.2",
+    "@ng-select/ng-select": "^2.3.2",
     "@ngx-formly/bootstrap": "^3.1.0",
     "@ngx-formly/core": "^3.1.0",
     "@swimlane/ngx-datatable": "^11.3.2",
     "@swimlane/ngx-dnd": "^3.2.0",
     "angular-async-local-storage": "^3.1.4",
-    "angular2-hotkeys": "^2.0.4",
+    "angular2-hotkeys": "^2.1.2",
     "angular2-text-mask": "^8.0.5",
     "bootstrap": "^4.1.1",
-    "chart.js": "2.7.1",
-    "core-js": "^2.5.6",
+    "chart.js": "2.7.2",
+    "core-js": "^2.5.7",
     "flag-icon-css": "3.0.0",
     "font-awesome": "^4.7.0",
-    "moment": "^2.22.1",
+    "hoek": "^4.2.1",
+    "moment": "^2.22.2",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "1.6.0",
     "ng2-file-upload": "^1.3.0",
-    "ngx-bootstrap": "2.0.4",
+    "ngx-bootstrap": "3.0.0",
     "ngx-clipboard": "^10.0.0",
-    "ngx-perfect-scrollbar": "5.3.5",
+    "ngx-perfect-scrollbar": "6.1.0",
     "ngx-quill": "^2.2.0",
-    "ngx-toastr": "^8.5.1",
-    "rxjs": "^6.1.0",
+    "ngx-toastr": "^8.8.0",
+    "npm": "^6.1.0",
+    "rxjs": "^6.2.1",
     "rxjs-compat": "6.1.0",
     "simple-line-icons": "^2.4.1",
     "text-mask-addons": "^3.7.2",
@@ -64,8 +60,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.6.1",
-    "@angular-devkit/build-ng-packagr": "~0.6.1",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular-devkit/build-ng-packagr": "^0.6.8",
     "@angular/cli": "6.0.1",
     "@angular/compiler-cli": "6.0.1",
     "@angular/language-service": "6.0.1",
@@ -80,11 +76,11 @@
     "karma-coverage-istanbul-reporter": "1.4.2",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.0.0",
-    "ng-packagr": "^3.0.0-rc.5",
+    "ng-packagr": "^3.0.3",
     "protractor": "5.3.1",
     "ts-node": "6.0.2",
     "tsickle": "^0.28.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.9.3",
     "tslint": "5.10.0",
     "typescript": "2.7.2"
   },
