--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "3.0.0",
     "ngx-clipboard": "^10.0.0",
+    "ngx-color-picker": "^6.5.0",
     "ngx-perfect-scrollbar": "6.1.0",
     "ngx-quill": "^2.2.0",
     "ngx-toastr": "^8.8.0",
