--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@angular/service-worker": "6.0.2",
     "@angular/upgrade": "6.0.2",
     "@coreui/angular": "^2.0.0-rc.1",
-    "@coreui/coreui": "^2.0.3",
+    "@coreui/coreui": "^2.0.4",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "^0.1.1",
-    "@ng-select/ng-select": "^2.3.2",
+    "@ng-select/ng-select": "^2.3.6",
     "@ngx-formly/bootstrap": "^3.1.0",
     "@ngx-formly/core": "^3.1.0",
     "@swimlane/ngx-datatable": "^11.3.2",
@@ -36,7 +36,7 @@
     "angular-async-local-storage": "^3.1.4",
     "angular2-hotkeys": "^2.1.2",
     "angular2-text-mask": "^8.0.5",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "chart.js": "2.7.2",
     "core-js": "^2.5.7",
     "flag-icon-css": "3.0.0",
@@ -48,15 +48,15 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "3.0.0",
     "ngx-clipboard": "^10.0.0",
-    "ngx-color-picker": "^6.5.0",
+    "ngx-color-picker": "^6.6.0",
     "ngx-perfect-scrollbar": "6.1.0",
-    "ngx-quill": "^2.2.0",
-    "ngx-toastr": "^8.8.0",
-    "npm": "^6.1.0",
-    "rxjs": "^6.2.1",
+    "ngx-quill": "^3.4.0",
+    "ngx-toastr": "^8.10.0",
+    "npm": "^6.3.0",
+    "rxjs": "^6.2.2",
     "rxjs-compat": "6.1.0",
     "simple-line-icons": "^2.4.1",
-    "text-mask-addons": "^3.7.2",
+    "text-mask-addons": "^3.8.0",
     "ts-helpers": "1.1.2",
     "zone.js": "^0.8.26"
   },
@@ -72,13 +72,13 @@
     "codelyzer": "4.3.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "1.4.2",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.0.0",
-    "ng-packagr": "^3.0.3",
-    "protractor": "5.3.1",
+    "ng-packagr": "^4.0.1",
+    "protractor": "^5.4.0",
     "ts-node": "6.0.2",
     "tsickle": "^0.28.0",
     "tslib": "^1.9.3",
