--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
+    "@ngx-formly/bootstrap": "^4.7.2",
+    "@ngx-formly/core": "^4.7.2",
     "@swimlane/ngx-datatable": "^13.1.0",
     "bootstrap": "^4.1.2",
     "chart.js": "^2.7.2",
