--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.22.2",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "^1.6.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-perfect-scrollbar": "^6.2.0",
     "ngx-toastr": "^8.10.0",
