--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-perfect-scrollbar": "^6.2.0",
     "ngx-toastr": "^8.10.0",
+    "primeicons": "^1.0.0-beta.10",
+    "primeng": "^6.1.2",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
     "ts-helpers": "^1.1.2",
