--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-perfect-scrollbar": "^6.2.0",
+    "ngx-quill": "^3.4.0",
     "ngx-toastr": "^8.10.0",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.2",
