--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-color-picker": "^6.6.0",
     "ngx-perfect-scrollbar": "^6.2.0",
     "ngx-quill": "^3.4.0",
     "ngx-toastr": "^8.10.0",
