added form elements

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@ngrx/store-devtools": "^6.1.0",
     "@ngx-formly/bootstrap": "^4.7.2",
     "@ngx-formly/core": "^4.7.2",
+    "@swimlane/dragula": "^3.7.3",
     "@swimlane/ngx-datatable": "^13.1.0",
+    "@swimlane/ngx-dnd": "^5.0.6",
     "bootstrap": "^4.1.2",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.7",
