--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@swimlane/dragula": "^3.7.3",
     "@swimlane/ngx-datatable": "^13.1.0",
     "@swimlane/ngx-dnd": "^5.0.6",
+    "@types/googlemaps": "^3.30.12",
     "bootstrap": "^4.1.2",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.7",
@@ -49,7 +50,6 @@
     "ngx-perfect-scrollbar": "^6.2.0",
     "ngx-quill": "^3.4.0",
     "ngx-toastr": "^8.10.0",
-    "ol": "^5.2.0",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.2",
     "rxjs": "^6.2.1",
