--- a/package.json
+++ b/package.json
@@ -81,7 +81,11 @@
     "karma-jasmine-html-reporter": "^1.2.0",
     "protractor": "^5.3.2",
     "ts-node": "^6.1.1",
-    "tslint": "^5.10.0"
+    "tslint": "^5.10.0",
+    "cryptiles": ">=4.1.2",
+    "url-parse": ">=1.4.3",
+    "adm-zip": ">=0.4.11",
+    "webpack-dev-server": ">=3.1.11"
   },
   "engines": {
     "node": ">= 8.9.4",
