--- a/package.json
+++ b/package.json
@@ -14,28 +14,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.9",
-    "@angular/common": "^6.0.9",
-    "@angular/compiler": "^6.0.9",
-    "@angular/core": "^6.0.9",
-    "@angular/forms": "^6.0.9",
-    "@angular/http": "^6.0.9",
-    "@angular/platform-browser": "^6.0.9",
-    "@angular/platform-browser-dynamic": "^6.0.9",
-    "@angular/router": "^6.0.9",
+    "@angular/animations": "^7.2.6",
+    "@angular/cdk": "^7.3.3",
+    "@angular/common": "^7.2.6",
+    "@angular/compiler": "^7.2.6",
+    "@angular/core": "^7.2.6",
+    "@angular/forms": "^7.2.6",
+    "@angular/http": "^7.2.6",
+    "@angular/platform-browser": "^7.2.6",
+    "@angular/platform-browser-dynamic": "^7.2.6",
+    "@angular/router": "^7.2.6",
     "@auth0/angular-jwt": "^2.0.0",
     "@coreui/angular": "^2.0.0-rc.1",
     "@coreui/coreui": "^2.0.4",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@ng-select/ng-select": "^2.4.3",
-    "@ngrx/store": "^6.1.0",
-    "@ngrx/store-devtools": "^6.1.0",
+    "@ngrx/store": "^7.2.0",
+    "@ngrx/store-devtools": "^7.2.0",
     "@ngx-formly/bootstrap": "^4.7.2",
     "@ngx-formly/core": "^4.7.2",
     "@swimlane/dragula": "^3.7.3",
     "@swimlane/ngx-charts": "^10.0.0",
-    "@swimlane/ngx-datatable": "^13.1.0",
-    "@swimlane/ngx-dnd": "^5.0.6",
+    "@swimlane/ngx-datatable": "^14.0.0",
+    "@swimlane/ngx-dnd": "^6.0.0",
     "@types/googlemaps": "^3.30.12",
     "bootstrap": "^4.1.2",
     "chart.js": "^2.7.2",
@@ -47,44 +48,45 @@
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
-    "ngx-color-picker": "^6.6.0",
-    "ngx-perfect-scrollbar": "^6.2.0",
-    "ngx-quill": "^3.4.0",
-    "ngx-toastr": "^8.10.0",
+    "ngx-color-picker": "^7.3.1",
+    "ngx-perfect-scrollbar": "^7.2.1",
+    "ngx-quill": "^4.6.11",
+    "ngx-toastr": "^9.1.2",
     "primeicons": "^1.0.0-beta.10",
-    "primeng": "^6.1.2",
+    "primeng": "^7.0.5",
+    "quill": "^1.3.6",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.9",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular-devkit/build-angular": "^0.6.8",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "2.7.2",
-    "@angular/cli": "^6.0.8",
-    "@angular/language-service": "^6.0.9",
-    "@types/jasmine": "^2.8.8",
+    "@angular-devkit/build-angular": "^0.13.2",
+    "@angular-devkit/build-ng-packagr": "~0.13.2",
+    "@angular/cli": "^7.3.2",
+    "@angular/compiler-cli": "^7.2.6",
+    "@angular/language-service": "^7.2.6",
+    "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.3.4",
+    "@types/node": "^11.9.4",
+    "adm-zip": ">=0.4.11",
     "codelyzer": "^4.4.2",
+    "cryptiles": ">=4.1.2",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.3",
+    "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.1",
-    "karma-jasmine": "^1.1.2",
+    "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.2.0",
+    "ng-packagr": "^4.7.1",
     "protractor": "^5.3.2",
-    "ts-node": "^6.1.1",
+    "ts-node": "^8.0.2",
+    "tsickle": "0.34.0",
+    "tslib": "^1.7.1",
     "tslint": "^5.10.0",
-    "cryptiles": ">=4.1.2",
+    "typescript": "3.1.6",
     "url-parse": ">=1.4.3",
-    "adm-zip": ">=0.4.11",
     "webpack-dev-server": ">=3.1.11"
   },
   "engines": {
