--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@swimlane/ngx-datatable": "^14.0.0",
     "@swimlane/ngx-dnd": "^6.0.0",
     "@types/googlemaps": "^3.30.12",
+    "@types/moment-timezone": "^0.5.12",
     "bootstrap": "^4.1.2",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.7",
     "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.3.0",
