--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "serve": "ng serve --proxy-config proxy.config.json",
     "build": "ng build --prod --output-path=build/ && rm build/index.html",
-    "build-with-stats": "ng build --prod --output-path=build/ --stats-json && rm build/index.html",
+    "build-with-stats": "ng build --prod --output-path=build/ --stats-json && rm build/index.html && yarn run bundle-report",
     "bundle-report": "webpack-bundle-analyzer build/stats.json",
     "test": "ng test",
     "test:once": "ng test --watch=false",
@@ -46,7 +46,6 @@
     "core-js": "^2.5.7",
     "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
-    "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "^1.6.0",
