add webpack config

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "IXOCREATE admin frontend",
   "scripts": {
     "ng": "ng",
-    "serve": "ng serve --proxy-config proxy.config.json",
-    "build": "ng build --prod --output-path=build/ && rm build/index.html",
-    "build-with-stats": "ng build --prod --output-path=build/ --stats-json && rm build/index.html && yarn run bundle-report",
+    "serve": "ng serve --proxy-config proxy.config.json --extra-webpack-config webpack.partial.js",
+    "build": "ng build --prod --extra-webpack-config webpack.partial.js --output-path=build/ && rm build/index.html",
+    "build-with-stats": "ng build --prod --extra-webpack-config webpack.partial.js --output-path=build/ --stats-json && rm build/index.html && yarn run bundle-report",
     "bundle-report": "webpack-bundle-analyzer build/stats.json",
     "test": "ng test",
     "test:once": "ng test --watch=false",
@@ -51,6 +51,7 @@
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-build-plus": "^7.7.6",
     "ngx-color-picker": "^7.3.1",
     "ngx-perfect-scrollbar": "^7.2.1",
     "ngx-quill": "^4.6.11",
