--- a/angular.json
+++ b/angular.json
@@ -48,10 +48,6 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
-                },
-                {
-                  "replace": "node_modules/quill/dist/quill.js",
-                  "with": "node_modules/quill/dist/quill.core.js"
                 }
               ]
             }
@@ -64,13 +60,7 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng:build:production",
-              "fileReplacements": [
-                {
-                  "replace": "node_modules/quill/dist/quill.js",
-                  "with": "node_modules/quill/dist/quill.core.js"
-                }
-              ]
+              "browserTarget": "ng:build:production"
             }
           }
         },
