--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "ixocreate/admin-frontend",
-  "description": "IXOCREATE Admin Application",
+  "description": "IXOCREATE Admin Frontend Application",
   "license": "MIT",
   "type": "project",
   "authors": [
