--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
   "type": "project",
   "authors": [
     {
-      "name": "IXOCREATE"
+      "name": "IXOCREATE",
+      "email": "opensource@ixocreate.com",
+      "homepage": "https://www.ixocreate.com",
+      "role": "Developer"
     }
   ],
   "require": {}
