--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
     "ts-helpers": "^1.1.2",
+    "uuid": "3.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
