(feat #5): add a mobile preview on the editing page
(feat #5): add a mobile preview on the editing page
(feat #5): add automatic reloading of the preview
(feat #5): add better styling
(feat #5): add dragging functionality
(feat #5): add build files & changelog

--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               ]
             },
             "scripts": [
+              "node_modules/split.js/dist/split.min.js"
             ]
           },
           "configurations": {
