--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "IXOCREATE admin frontend",
   "scripts": {
     "ng": "ng",
-    "serve": "ng serve --proxy-config proxy.config.json --extra-webpack-config webpack.partial.js",
+    "serve": "ng serve --proxy-config proxy.config.json --extra-webpack-config webpack.partial.js --poll=2000",
     "build": "ng build --prod --extra-webpack-config webpack.partial.js --output-path=build/ && rm build/index.html",
     "build-with-stats": "ng build --prod --extra-webpack-config webpack.partial.js --output-path=build/ --stats-json && rm build/index.html && yarn run bundle-report",
     "bundle-report": "webpack-bundle-analyzer build/stats.json",
